cmake_minimum_required(VERSION 3.20)
project(implementing_ssl_gcc C)

set(CMAKE_C_STANDARD 11)

include_directories(before/appC)
include_directories(before/ch01)
include_directories(before/ch02)
include_directories(before/ch03)
include_directories(before/ch04)
include_directories(before/ch05)
include_directories(before/ch06)
include_directories(before/ch07)
include_directories(before/ch08)
include_directories(before/ch09)

add_executable(implementing_ssl_gcc
        before/appC/https.c
        before/appC/ssl.c
        before/appC/ssl.h
        before/ch01/base64.c
        before/ch01/base64.h
        before/ch01/http.c
        before/ch01/webserver.c
        before/ch02/aes.c
        before/ch02/aes.h
        before/ch02/des.c
        before/ch02/des.h
        before/ch02/hex.c
        before/ch02/hex.h
        before/ch02/rc4.c
        before/ch02/rc4.h
        before/ch03/dh.h
        before/ch03/ecc_int.c
        before/ch03/ecc_int.h
        before/ch03/huge.c
        before/ch03/huge.h
        before/ch03/rsa.c
        before/ch03/rsa.h
        before/ch04/digest.c
        before/ch04/digest.h
        before/ch04/dsa.c
        before/ch04/dsa.h
        before/ch04/ecc.c
        before/ch04/ecc.h
        before/ch04/ecdsa.c
        before/ch04/ecdsa.h
        before/ch04/hmac.c
        before/ch04/hmac.h
        before/ch04/md5.c
        before/ch04/md5.h
        before/ch04/sha.c
        before/ch04/sha.h
        before/ch05/asn1.c
        before/ch05/asn1.h
        before/ch05/x509.c
        before/ch05/x509.h
        before/ch06/https.c
        before/ch06/prf.c
        before/ch06/prf.h
        before/ch06/tls.c
        before/ch06/tls.h
        before/ch06/x509.c
        before/ch06/x509.h
        before/ch07/file.c
        before/ch07/file.h
        before/ch07/privkey.c
        before/ch07/privkey.h
        before/ch07/ssl_webserver.c
        before/ch07/tls.c
        before/ch07/tls.h
        before/ch08/https.c
        before/ch08/rsa.c
        before/ch08/rsa.h
        before/ch08/tls.c
        before/ch08/tls.h
        before/ch08/x509.c
        before/ch09/aes.c
        before/ch09/aes.h
        before/ch09/ecc.c
        before/ch09/ecc.h
        before/ch09/prf.c
        before/ch09/prf.h
        before/ch09/tls.c
        before/ch09/tls.h
        before/ch09/x509.c
        before/ch09/x509.h
        before/ch10/https.c
        before/ch10/https_openssl.c)
